fixed layout problems and overflow issues, added start bar and working clock. all is responsive

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,8 @@ body{
     background-attachment: fixed;
     font-family: "VT323", monospace;
 }
+
+html, body{
+  height: 100%;
+  margin: 0;
+}
