--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,25 +1,4 @@
-/* Footer.css */
-.footer {
-    background-color: #D9D9D9;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 5%;
-    border-top: solid 8px white;
-  }
-
-.footer-content{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-
-.tabs{
-    margin-right: 5%;
-    margin-left: 5%;
-    font-size: 48px;
-    padding: 10px;
-    background-color: #D9D9D9;
-    border-right: solid 7px #7C7C7C;
+footer div p{
+    background-image: url('../images/tabbg.png');
+    background-size: cover;
 }
